--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ section {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-wrapper {
   display: flex;
@@ -108,6 +109,7 @@ section {
   background-size: cover;
   background-repeat: no-repeat;
   padding: 188px 0 188px;
+  max-width: 1440px;
 }
 .hero-image-wrapper {
   display: flex;
@@ -170,7 +172,16 @@ section {
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
-  margin-top: 8px;
+  margin-top: 0px;
+}
+.icon-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 /* section-3 styles */
