--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,8 @@ section {
   justify-content: center;
   color: #8e8f99;
 }
-.company:hover {
+.company:hover,
+.company:focus {
   color: var(--brand-color-4);
   border-color: var(--brand-color-4);
 }
@@ -358,6 +359,9 @@ section {
   margin-top: 0px;
   margin-bottom: 16px;
   color: var(--brand-color-2);
+}
+.media-icon {
+  fill: var(--brand-color-5);
 }
 .media-icons {
   width: 40px;
@@ -411,7 +415,7 @@ section {
   background-color: var(--brand-color-4);
   color: var(--brand-color-2);
   border: 1px solid transparent;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio {
   flex-wrap: wrap;
@@ -421,9 +425,8 @@ section {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
 }
-.portfolio-item:hover {
-  border: 1px solid var(--brand-color-5);
-  border-top: none;
+.p-card:hover,
+.p-card:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .border {
